3.msa-container/manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    role: msa-web
    app: msa
spec:
  replicas: 2
  selector:
    matchLabels:
      role: msa-web
  template:
    metadata:
      labels:
        app: msa
        role: msa-web
    spec:
      containers:
      - image: asia.gcr.io/my_project/web:WEBTAG
        name: web
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: msa
    role: msa-api
spec:
  replicas: 2
  selector:
    matchLabels:
      role: msa-api
  template:
    metadata:
      labels:
        app: msa
        role: msa-api
    spec:
      containers:
      - image: asia.gcr.io/my_project/api:APITAG
        name: api
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: msa
    role: msa-post
spec:
  replicas: 2
  selector:
    matchLabels:
      role: msa-post
  template:
    metadata:
      labels:
        app: msa
        role: msa-post
    spec:
      containers:
      - image: asia.gcr.io/my_project/post:POSTTAG
        name: posts
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threads
  labels:
    app: msa
    role: msa-threads
spec:
  replicas: 3
  selector:
    matchLabels:
      role: msa-threads
  template:
    metadata:
      labels:
        app: msa
        role: msa-threads
    spec:
      containers:
      - image: asia.gcr.io/my_project/threads:THREADSTAG
        name: threads
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: msa
    role: msa-users
spec:
  replicas: 2
  selector:
    matchLabels:
      role: msa-users
  template:
    metadata:
      labels:
        app: msa
        role: msa-users
    spec:
      containers:
      - image: asia.gcr.io/my_project/users:USERSTAG
        name: users
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
