3.msa-container/manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersvc
  labels:
    app: msa
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    role: msa-users

---
apiVersion: v1
kind: Service
metadata:
  name: postsvc
  labels:
    app: msa
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    role: msa-post

---
apiVersion: v1
kind: Service
metadata:
  name: threadsvc
  labels:
    app: msa
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    role: msa-threads

---
apiVersion: v1
kind: Service
metadata:
  name: websvc
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    role: msa-web

---
apiVersion: v1
kind: Service
metadata:
  name: apisvc
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    role: msa-api
